// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Gift component matches snapshot 1`] = `
<DocumentFragment>
  <button
    class="root-0-2-1"
    type="button"
  >
    <div
      class="root-0-2-8"
      style="--blur: 0px;"
    >
      <span
        style="height: 0px; width: 0px;"
      />
      <span
        style="height: 0px; width: 0px;"
      />
      <span
        style="height: 0px; width: 0px;"
      />
    </div>
    <div
      class="wrp-0-2-3"
    >
      <h2
        class="title-0-2-4"
      >
        This is your gift
      </h2>
      <p>
        We appreciate you, therefore we have prepared a gift for you. Click right now
      </p>
    </div>
    <img
      alt=""
      class="img-0-2-2"
      src="/icons/gift.png"
    />
  </button>
</DocumentFragment>
`;

exports[`Gift component matches snapshot 2`] = `
<DocumentFragment>
  <button
    class="root-0-2-9"
    style="margin: 10px 20px; padding-bottom: 10px; background-color: rgb(255, 255, 255);"
    type="button"
  >
    <div
      class="root-0-2-16"
      style="--blur: 0px;"
    >
      <span
        style="height: 0px; width: 0px;"
      />
      <span
        style="height: 0px; width: 0px;"
      />
      <span
        style="height: 0px; width: 0px;"
      />
    </div>
    <div
      class="wrp-0-2-11"
    >
      <h2
        class="title-0-2-12"
      >
        This is your gift
      </h2>
      <p>
        We appreciate you, therefore we have prepared a gift for you. Click right now
      </p>
    </div>
    <img
      alt=""
      class="img-0-2-10"
      src="/icons/gift.png"
    />
  </button>
</DocumentFragment>
`;
